Fixed alignment issues in project info section of project overview and improved input element style modifications

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -1108,6 +1108,19 @@ textarea.parameterInput {
 	padding: 8px;
 }
 
+.discreetInputHidden {
+	display: none !important;
+}
+
+.discreetInputURLWrapper {
+	padding: 2px;
+}
+
+.discreetInputCell {
+	color: #666666;	
+	padding: 1px;
+}
+
 .discreetInfoCell {
 	color: #666666;	
 	padding: 8px;
